--- a/webapp/package.json
+++ b/webapp/package.json
@@ -25,7 +25,6 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "chai": "^4.1.2",
-    "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
@@ -39,15 +38,14 @@
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-replace": "^2.0.0",
     "rollup-plugin-uglify": "^3.0.0",
+    "sinon": "^5.0.7",
     "style-loader": "^0.21.0",
     "svg-inline-loader": "^0.8.0",
     "uglify-js": "^3.3.23",
     "uglify-js-brunch": "^2.10.0",
     "uglifyify": "^5.0.0",
     "webpack": "^4.7.0",
-    "webpack-bundle-analyzer": "^2.11.1",
     "webpack-cli": "^2.1.2",
-    "webpack-combine-loaders": "^2.0.3",
     "webpack-dev-server": "^3.1.4",
     "webpack-merge": "^4.1.2"
   },
