--- a/webapp/package.json
+++ b/webapp/package.json
@@ -60,8 +60,11 @@
     "react-dom": "^16.3.2",
     "react-flexbox-grid": "^2.1.0",
     "react-infinite-scroller": "^1.1.4",
+    "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-tap-event-plugin": "^3.0.2"
+    "react-tap-event-plugin": "^3.0.2",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.2.0"
   }
 }
